--- a/scss/_new_Arrivals.scss
+++ b/scss/_new_Arrivals.scss
@@ -17,15 +17,27 @@
         .cardProducts{
             width: 250%;
             position: relative;
-            .article1, .article2, .article3, .article4, .article5, .article6, .article7, .article8,.article9, .article10{
+            .article1, .article2, .article3, .article4, .article5, .article6, .article7, .article8, .article9, .article10{
                 .smallCard{
                     display:none;
+                }
+                .nameOut{
+                    color: $primaryColor;
+                    font-size: $nameLogo;
+                    font-weight: $mediumBold;
+                    font-family: $fontRubik;
+                    position: absolute;
+                    top:30px;
+                    left: 20%;
+                    z-index: -1;
                 }
                 #outFit{
                     width: 100%;
                     height: 100%;
-                    transition:all 0.3s ease;
+                    transition:$transition;
                     &:hover{
+                        content:"";
+                        transform: translateY(50px);
                         filter: blur(2px) grayscale(60%);
                     }
                 }
@@ -46,7 +58,7 @@
                     right:25px;
                     box-shadow:0 0 3px 1px #474747;
                     z-index: 1;
-                    transition: all 0.3s ease;
+                    transition: $transition;
                     &:hover{
                         box-shadow: 0 0 4px 3px #474747;
                     }
