--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -412,6 +412,7 @@
             <div class="sectionCardContainer d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article1">
+                        <p class="nameOut">Aggressive</p>
                         <label for="new1" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -425,6 +426,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article2">
+                        <p class="nameOut">Aggressive</p>
                         <label for="new2" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -438,12 +440,13 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article3">
+                        <p class="nameOut">Street</p>
                         <label for="new3" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
                         <input type="checkbox" id="new3" class="new">
                         <a href="store.html"  class="smallCard">
-                            <img src="img/pic29.webp" alt="Outfit Image" class="outFit">
+                            <img src="../img/pic29.webp" alt="Outfit Image" class="outFit">
                             <p class="price">Street.............................$599</p>
                         </a>
                         <img src="../img/pic29.webp" alt="Outfit Image" id="outFit" class="outFit">
@@ -451,6 +454,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article4">
+                        <p class="nameOut">Aggressive</p>
                         <label for="new4" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -464,6 +468,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article5">
+                        <p class="nameOut">Xtreme</p>
                         <label for="new5" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -479,6 +484,7 @@
             <div class="sectionCardContainer d-flex flex-direction-row">
                 <article class="cardProducts m-0">
                     <div class="article6">
+                        <p class="nameOut">Street</p>
                         <label for="new6" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -492,6 +498,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article7">
+                        <p class="nameOut">Xtreme</p>
                         <label for="new7" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -505,6 +512,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article8">
+                        <p class="nameOut">Aggressive</p>
                         <label for="new8" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -518,6 +526,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article9">
+                        <p class="nameOut">Xtreme</p>
                         <label for="new9" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
@@ -531,6 +540,7 @@
                 </article>
                 <article class="cardProducts m-0">
                     <div class="article10">
+                        <p class="nameOut">Xtreme</p>
                         <label for="new10" class="fadeAway">
                             <img src="../img/skull.svg" alt="Skull logo" class="skull">
                         </label>
