--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -187,6 +187,7 @@
                         transform: translateY(0%);
                         transition: transform $transition;
                         .heartIcon{
+                            width:20px;
                             align-self: self-end;
                             cursor: pointer;
                         }
