Updating wishlist Modal

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -103,3 +103,8 @@ $screenPercentageHeight:100%;
 // Transitions
 
 $transition: 0.3s ease-in-out;
+
+// Modals
+
+$filterShadow:  drop-shadow(12px 12px 5px #000000a4);
+
