--- a/scss/_wish_List.scss
+++ b/scss/_wish_List.scss
@@ -1,9 +1,7 @@
 
 // Wishlist
 
-// Mixin
-
-#wishlistSide{
+section#wishlistSide{
     display: none;
     &:checked ~ .sectionWishlist{
         transform:translate(0%);
