--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,13 +8,14 @@
 @import "_advertising";
 @import "_gift_Card";
 @import "_best_Sellers";
+@import "_wish_List";
 @import "_store";
 @import "_my_Cart";
 @import "_new_Arrivals";
 @import "_sign_In_&_Create_Account";
 @import "_purchase_Order";
-@import "_wish_List";
 @import "_place_Order";
+@import "_modals";
 @import "_filter";
 @import "_shipping";
 @import "_show_Room";
