--- a/views/store.html
+++ b/views/store.html
@@ -373,6 +373,14 @@
             </article>
         </section>
 
+        <!-- WhishList Modal -->
+
+        <section id="messageContainer">
+
+        <!-- Se inyecta el codigo desde wishlist.js -->
+
+        </section>
+
         <!-- WhishList -->
 
         <input type="checkbox" id="wishlistSide">
@@ -403,7 +411,6 @@
                                     <img class="itemWishlist" src="img/wishlist_Icon.svg" alt="Wishlist icon">
                                 </div>
                             </article> -->
-
                         </article>
                     </div>
                 </div>
