--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@
   align-items: center;
 }
 
-.flexRowBetween, .footerContainer .footer, .showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case .opinion, .showRoom .rightSide .infoProduct .addToCart, .showRoom .rightSide .infoProduct .productRating, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelThree, .sectionFilter .menuFilterSide, .sectionPlaceOrder .unionOrder .delivery .deliveryContact .fullName, .sectionPlaceOrder .unionOrder, .sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct, .headerSignIn .menuSide .top, .giftCards .containerGetOff, .heroSection, .header .menuSide .top, .header, .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct, .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .containerArticles .cartList, .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .category {
+.flexRowBetween, .footerContainer .footer, .showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case .opinion, .showRoom .rightSide .infoProduct .addToCart, .showRoom .rightSide .infoProduct .productRating, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .priceThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .priceThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .priceThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .priceThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .availability .labelThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .pricing .labelThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .availability .labelThree, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelOne, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelTwo, .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .pricing .labelThree, .sectionFilter .menuFilterSide, .sectionPlaceOrder .unionOrder .delivery .deliveryContact .fullName, .sectionPlaceOrder .unionOrder, .headerSignIn .menuSide .top, .sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct, .giftCards .containerGetOff, .heroSection, .header .menuSide .top, .header, .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct, .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .containerArticles .cartList, .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .category {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -1087,6 +1087,110 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
   text-decoration: underline;
 }
 
+section#wishlistSide {
+  display: none;
+}
+section#wishlistSide:checked ~ .sectionWishlist {
+  transform: translate(0%);
+}
+
+.sectionWishlist {
+  width: 30vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 10px;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-shadow: 0 0 10px 6px #070707;
+  z-index: 10;
+  padding-top: 60px;
+  transform: translate(105%);
+  transition: 0.3s ease-in-out;
+}
+.sectionWishlist .wishHeadLine .closeCross {
+  width: 15px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  transform: rotate(0deg);
+  transition: 0.3s ease-in-out;
+}
+.sectionWishlist .wishHeadLine .closeCross:hover {
+  transform: rotate(90deg);
+}
+.sectionWishlist .menuWishlist {
+  width: 100%;
+}
+.sectionWishlist .menuWishlist .choiceWishlist {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 0px auto;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wishlistWord {
+  width: inherit;
+  font-size: 1.2rem;
+  font-family: "Jura", sans-serif;
+  color: #bc2327;
+  font-weight: 600;
+  margin: 0px;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish {
+  width: 90%;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish .category {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 0px;
+  border-bottom: none;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish .category .titleWishlist {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #bc2327;
+  font-weight: 600;
+  margin: 15px 0px;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist {
+  width: 90%;
+  height: 430px;
+  padding: 0px 20px 20px 0px;
+  overflow: scroll;
+  margin: 0px 20px 0px 0px;
+  position: fixed;
+  top: 150px;
+  left: 20px;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct {
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct .itemProduct {
+  width: 15%;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct .description {
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct .description .wishPrice {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #bc2327;
+  font-weight: 600;
+}
+.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct .description .icons img {
+  width: 20px;
+  cursor: pointer;
+}
+
 .containerStore {
   margin: 100px auto 150px;
 }
@@ -1249,7 +1353,6 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
   color: #ffffff;
   font-weight: 500;
   font-family: "Jura", sans-serif;
-  z-index: 1;
   transition: 0.3s ease-in-out;
 }
 .containerStore .sectionStore .sectionCard .cardProducts .article .info {
@@ -2328,110 +2431,6 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
   position: relative;
 }
 
-#wishlistSide {
-  display: none;
-}
-#wishlistSide:checked ~ .sectionWishlist {
-  transform: translate(0%);
-}
-
-.sectionWishlist {
-  width: 30vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 10px;
-  background-color: #ffffff;
-  overflow: hidden;
-  box-shadow: 0 0 10px 6px #070707;
-  z-index: 10;
-  padding-top: 60px;
-  transform: translate(105%);
-  transition: 0.3s ease-in-out;
-}
-.sectionWishlist .wishHeadLine .closeCross {
-  width: 15px;
-  cursor: pointer;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  transform: rotate(0deg);
-  transition: 0.3s ease-in-out;
-}
-.sectionWishlist .wishHeadLine .closeCross:hover {
-  transform: rotate(90deg);
-}
-.sectionWishlist .menuWishlist {
-  width: 100%;
-}
-.sectionWishlist .menuWishlist .choiceWishlist {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin: 0px auto;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wishlistWord {
-  width: inherit;
-  font-size: 1.2rem;
-  font-family: "Jura", sans-serif;
-  color: #bc2327;
-  font-weight: 600;
-  margin: 0px;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish {
-  width: 90%;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish .category {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 20px 0px;
-  border-bottom: none;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish .category .titleWishlist {
-  font-size: 1rem;
-  font-family: "Jura", sans-serif;
-  color: #bc2327;
-  font-weight: 600;
-  margin: 15px 0px;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist {
-  width: 90%;
-  height: 430px;
-  padding: 0px 20px 20px 0px;
-  overflow: scroll;
-  margin: 0px 20px 0px 0px;
-  position: fixed;
-  top: 150px;
-  left: 20px;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct {
-  padding: 20px 0px;
-  border-bottom: 1px solid #e4e4e4;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct .itemProduct {
-  width: 15%;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct .description {
-  display: flex;
-  flex-direction: column;
-  margin-left: -40px;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct .description .wishPrice {
-  font-size: 1rem;
-  font-family: "Jura", sans-serif;
-  color: #bc2327;
-  font-weight: 600;
-}
-.sectionWishlist .menuWishlist .choiceWishlist .wish .containerWishlist .wishlist .blockProduct .description .icons img {
-  width: 20px;
-  cursor: pointer;
-}
-
 #order {
   display: flex;
   font-family: "Jura", sans-serif;
@@ -2584,6 +2583,32 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
 
 .sectionPlaceOrder > * {
   position: relative;
+}
+
+#messageContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 50px;
+  right: 10%;
+  z-index: 9;
+}
+#messageContainer div .messageWishlist {
+  width: 20vw;
+  height: auto;
+  font-size: 0.8rem;
+  font-family: "Jura", sans-serif;
+  color: #bc2327;
+  font-weight: 600;
+  background-color: rgba(0, 0, 0, 0.8509803922);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  filter: drop-shadow(12px 12px 5px rgba(0, 0, 0, 0.6431372549));
 }
 
 .sectionFilter .menuFilterSide {
