--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -173,6 +173,7 @@
                         font-weight: 500;
                         font-family: $fontJura;
                         transition:$transition;
+                        z-index: 1;
                     }
                     .info{
                         width:101%;
