Making wishlist.js & cart.js 6 store.js modals

--- a/views/store.html
+++ b/views/store.html
@@ -417,6 +417,15 @@
             </nav>
         </section>
 
+        <!-- WhishList Modal -->
+
+        <section id="messageNewProduct">
+
+        <!-- Se inyecta el codigo desde cart.js & store.js-->
+
+        </section>
+
+
         <!-- Store -->
 
         <section class="sectionStore">
