--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -1,3 +1,4 @@
+// Modals
 
 // wishlist modal
 
@@ -28,3 +29,33 @@
         }
     }
 }
+
+// shopping cart modal
+
+#messageNewProduct{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: fixed;
+        bottom: 50px;
+        left: 35%;
+        z-index: 9;
+        .stockProduct{
+            width: 20vw;
+            height: auto;
+            font-size: $xSmallText;
+            font-family: $fontJura;
+            color:$primaryColor;
+            font-weight:$bold;
+            background-color: #000000d9;
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            filter: $filterShadow;
+        }
+    }
+
+
