Updating cart.html & home.html & signIn.html modals shoppingCart

--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -171,6 +171,14 @@
             </article>
         </section>
 
+        <!-- Cart & Store Modal -->
+
+        <section id="messageNewProduct">
+
+            <!-- Se inyecta el codigo desde cart.js & store.js-->
+
+        </section>
+
         <!-- ShoppingCart -->
 
         <input id="cart" type="checkbox">
