--- a/views/store.html
+++ b/views/store.html
@@ -417,7 +417,7 @@
             </nav>
         </section>
 
-        <!-- WhishList Modal -->
+        <!-- Cart & Store Modal -->
 
         <section id="messageNewProduct">
 
