--- a/css/main.css
+++ b/css/main.css
@@ -2586,16 +2586,16 @@ section#wishlistSide:checked ~ .sectionWishlist {
   position: relative;
 }
 
-#messageContainer {
+#messageContainer, #messageNewProduct {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: fixed;
-  bottom: 50px;
+  bottom: 0px;
   right: 10%;
   z-index: 9;
 }
-#messageContainer div .messageWishlist {
+#messageContainer div .messageWishlist, #messageContainer div .stockProduct, #messageNewProduct div .messageWishlist, #messageNewProduct div .stockProduct {
   width: 20vw;
   height: auto;
   font-size: 0.8rem;
@@ -2613,29 +2613,9 @@ section#wishlistSide:checked ~ .sectionWishlist {
 }
 
 #messageNewProduct {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   position: fixed;
-  bottom: 50px;
+  bottom: 0px;
   left: 35%;
-  z-index: 9;
-}
-#messageNewProduct .stockProduct {
-  width: 20vw;
-  height: auto;
-  font-size: 0.8rem;
-  font-family: "Jura", sans-serif;
-  color: #bc2327;
-  font-weight: 600;
-  background-color: rgba(0, 0, 0, 0.8509803922);
-  color: white;
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  filter: drop-shadow(12px 12px 5px rgba(0, 0, 0, 0.6431372549));
 }
 
 .sectionFilter .menuFilterSide {
