--- a/views/store.html
+++ b/views/store.html
@@ -425,6 +425,13 @@
 
         </section>
 
+        <!-- SoldOut Modal -->
+
+        <!-- <section id="messageSoldOutStock">
+
+        Se inyecta el codigo desde Store.js
+
+        </section> -->
 
         <!-- Store -->
 
