--- a/css/main.css
+++ b/css/main.css
@@ -2593,7 +2593,7 @@ section#wishlistSide:checked ~ .sectionWishlist {
   position: fixed;
   bottom: 0px;
   right: 10%;
-  z-index: 9;
+  z-index: 999;
 }
 #messageContainer div .messageWishlist, #messageContainer div .stockProduct, #messageNewProduct div .messageWishlist, #messageNewProduct div .stockProduct {
   width: 20vw;
@@ -2615,7 +2615,33 @@ section#wishlistSide:checked ~ .sectionWishlist {
 #messageNewProduct {
   position: fixed;
   bottom: 0px;
-  left: 35%;
+  right: 10%;
+}
+
+#out-of-stock-message {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 0px;
+  right: 10%;
+  z-index: 999;
+}
+#out-of-stock-message div .soldOutProduct {
+  width: 20vw;
+  height: auto;
+  font-size: 0.8rem;
+  font-family: "Jura", sans-serif;
+  color: #bc2327;
+  font-weight: 600;
+  background-color: rgba(0, 0, 0, 0.8509803922);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  filter: drop-shadow(12px 12px 5px rgba(0, 0, 0, 0.6431372549));
 }
 
 .sectionFilter .menuFilterSide {
