--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -7,9 +7,9 @@
     flex-direction: column;
     justify-content: space-between;
     position: fixed;
-    bottom: 0px;
-    right: 10%;
-    z-index: 999;
+    bottom: 70px;
+    right: 7%;
+    z-index: 99;
     div{
         .messageWishlist, .stockProduct{
             width: 20vw;
@@ -31,8 +31,8 @@
 }
 #messageNewProduct{
     position: fixed;
-    bottom: 0px;
-    right: 10%;
+    bottom: 70px;
+    right: 7%;
 }
 
 // SoldOutStock
@@ -42,11 +42,10 @@
     flex-direction: column;
     justify-content: space-between;
     position: fixed;
-    bottom: 0px;
-    right: 10%;
-    z-index: 999;
-
-
+    bottom: 70px;
+    right: 7%;
+    z-index: 99;
+    // gap:20px;
     div{
         .soldOutProduct{
             width: 20vw;
@@ -65,5 +64,22 @@
             filter: $filterShadow;
         }
     }
+    animation:slideUp 5800ms linear 0.3s;
+    @keyframes slideUp {
+        0% {
+            transform:translateY(0%);
+        }
+        25%{
+            transform:translateY(-125%);
+        }
+        50% {
+            transform:translateY(-225%);
+        }
+        75%{
+            transform:translateY(-325%);
+        }
+        100% {
+            transform:translateY(-425%);
+        }
+    }
 }
-
