Cleaning codeHTML files

--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -1,6 +1,6 @@
 // Modals
 
-// wishlist & shopping cart modal
+// wishlist & shopping cart & store modal
 
 #messageContainer, #messageNewProduct{
     display: flex;
