--- a/views/store.html
+++ b/views/store.html
@@ -41,7 +41,6 @@
         </a>
         <section class="menuIcons">
             <ul>
-                <li><a href="#"><img class="icon" src="../img/moon_Icon.svg" alt=""></a></li>
                 <li><a href="sign_In_&_Create_Account.html"><img class="icon" src="../img/user_Icon.svg" alt=""></a></li>
                 <li>
                     <label for="wishlistSide" class="wishHeadLine">
@@ -190,45 +189,36 @@
                     <label for="filterSide">
                         <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                     </label>
-
                     <div class="choiceFilter">
                         <h3 class="filterWord">Filter</h3>
                         <div class="sectionAvailability">
                             <h3 class="titleAvailability">Availability</h3>
-                                <article class="availability">
-                                    <label for="inStock" class="labelOne">
-                                        <input type="checkbox" id="inStock">In-stock
-                                    </label>
-
-                                    <label for="newArrivals" class="labelTwo">
-                                        <input type="checkbox" id="newArrivals">New Arrivals
-                                    </label>
-
-                                    <label for="soldOut" class="labelThree">
-                                        <input type="checkbox"  id="soldOut">Sold-out
-                                    </label>
-
+                            <article class="availability">
+                                <label for="inStock" class="labelOne">
+                                    <input type="checkbox" id="inStock">In-stock
+                                </label>
+                                <label for="newArrivals" class="labelTwo">
+                                    <input type="checkbox" id="newArrivals">New Arrivals
+                                </label>
+                                <label for="soldOut" class="labelThree">
+                                    <input type="checkbox"  id="soldOut">Sold-out
+                                </label>
                             </article>
                         </div>
                         <div class="sectionPricing">
                             <h3 class="titlePricing">Pricing</h3>
                             <article class="pricing">
-
                                     <label for="priceOne" class="priceOne">
                                         <input type="checkbox" id="priceOne">$499
                                     </label>
-
                                     <label for="priceTwo" class="priceTwo">
                                         <input type="checkbox" id="priceTwo">$599
                                     </label>
-
                                     <label for="priceThree" class="priceThree">
                                         <input type="checkbox" id="priceThree">$999
                                     </label>
-
                             </article>
                         </div>
-
                     </div>
                 </nav>
             </article>
@@ -253,21 +243,9 @@
                                 <h3 class="titleCartlist">Total</h3>
                             </article>
                             <article class="containerArticles">
-                                <!-- <article class="cartlist">
-                                        <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
-                                        <div class="description">
-                                            <p class="price">$499</p>
-                                            <div class="icons">
-                                                <img src="../img/trash_Icon.svg" alt="Trash icon">
-                                                <img src="../img/edit_Icon.svg" alt="Edit icon">
-                                            </div>
-                                        </div>
-                                        <div class="itemNumber">
-                                            <label for="quantity"></label>
-                                            <input type="number" id="quantity" name="quantity" min="1" max="5" value="0" >
-                                        </div>
-                                        <p class="total">$499</p>
-                                </article> -->
+
+                                <!-- Se inyecta el codigo desde cart.js -->
+
                             </article>
                         </div>
                     </div>
@@ -294,27 +272,15 @@
                 <div class="delivery">
                     <form class="deliveryContact">
                         <h3 class="contactTitle">Contact</h3>
-
                         <label for="email"></label>
                         <input type="email" id="email" placeholder="Email *">
-
                         <h3 class="deliveryTitle">Delivery</h3>
-
                         <div class="fullName">
                             <label for="name"></label>
                             <input type="text" id="name" placeholder="Name *">
-
                             <label for="lastName"></label>
                             <input type="text" id="lastName" placeholder="Last name *">
                         </div>
-
-                        <!-- <div class="region">
-                            <label for="country"></label>
-                            <input type="text" id="country" placeholder="Country *">
-
-                            <label for="Province"></label>
-                            <input type="text" id="Province" placeholder="Province *">
-                        </div> -->
 
                         <label for="Province"></label>
                         <input type="text" id="Province" placeholder="Province *">
@@ -398,19 +364,9 @@
                             <h3 class="titleWishlist">Wish</h3>
                         </article>
                         <article class="containerWishlist">
-                            <!-- <article class="wishlist">
-                                <div class="blockProduct">
-                                    <img class="itemProduct" src="img/pic24.webp" alt="Product pic">
-                                    <div class="description">
-                                        <p class="wishPrice">$499</p>
-                                        <div class="icons">
-                                            <img src="img/trash_Icon.svg" alt="Trash icon">
-                                            <img src="img/edit_Icon.svg" alt="Edit icon">
-                                        </div>
-                                    </div>
-                                    <img class="itemWishlist" src="img/wishlist_Icon.svg" alt="Wishlist icon">
-                                </div>
-                            </article> -->
+
+                            <!-- Se inyecta el codigo desde wishlist.js -->
+
                         </article>
                     </div>
                 </div>
@@ -427,28 +383,18 @@
 
         <!-- SoldOut Modal -->
 
-        <!-- <section id="messageSoldOutStock">
-
-        Se inyecta el codigo desde Store.js
-
-        </section> -->
+        <!-- Se inyecta desde store.js -->
 
         <!-- Store -->
 
         <section class="sectionStore">
             <div class="sectionCard">
-                <!-- <article class="cartProducts me-3">
-                    <div class="article">
-                        <img src="../img/pic1.webp" alt="Outfit Image" class="outFit">
-                        <div class="info">
-                            <img class="heartIcon" src="../img/wishlist_Icon.svg" alt="Heart icon">
-                            <p class="price">Outfit..........................$499</p>
-                            <a href="store.html" class="linkStore">Add to cart</a>
-                        </div>
-                    </div>
-                </article> -->
+
+                    <!-- Se inyecta desde store.js -->
+
             </div>
         </section>
+
     </main>
 
     <!-- Footer -->
@@ -489,6 +435,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+    <!-- Librery -->
+
+    <!-- Pendiente Modal de compra exitosa y numero de compra -->
 
     <!-- JS -->
 
