--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -336,12 +336,12 @@
 
     <!-- JS -->
 
-    <!-- <script src="../main.js"></script> -->
+    <script type="text/javascript" src="../main.js"></script>
 
-    <script src="../cart.js"></script>
+    <!-- <script src="../cart.js"></script>
     <script src="../store.js"></script>
     <script src="../filter.js"></script>
-    <script src="../wishlist.js"></script>
+    <script src="../wishlist.js"></script> -->
 
 </body>
 </html>
