Updating JS files

--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -590,12 +590,12 @@
 
     <!-- JS -->
 
-    <script type="text/javascript" src="../main.js"></script>
+    <!-- <script type="text/javascript" src="../main.js"></script> -->
 
-    <!-- <script src="../cart.js"></script>
-    <script src="../store.js"></script>
-    <script src="../filter.js"></script>
-    <script src="../wishlist.js"></script> -->
+    <script type="text/javascript" src="../js/cart.js"></script>
+    <script type="text/javascript" src="../js/store.js"></script>
+    <script type="text/javascript" src="../js/filter.js"></script>
+    <script type="text/javascript" src="../js/wishlist.js"></script>
 
 </body>
 </html>
