--- a/views/error404.html
+++ b/views/error404.html
@@ -37,7 +37,12 @@
 
     <!-- JS -->
 
-    <script src="../main.js"></script>
+    <!-- <script src="../main.js"></script> -->
+
+    <script type="text/javascript" src="../js/cart.js"></script>
+    <script type="text/javascript" src="../js/store.js"></script>
+    <script type="text/javascript" src="../js/filter.js"></script>
+    <script type="text/javascript" src="../js/wishlist.js"></script>
 
 </body>
 </html>
