Updating JS files & Making signIn&CreateAccount.js

--- a/views/store.html
+++ b/views/store.html
@@ -448,6 +448,7 @@
     <script type="text/javascript" src="../js/store.js"></script>
     <script type="text/javascript" src="../js/filter.js"></script>
     <script type="text/javascript" src="../js/wishlist.js"></script>
+    <script type="text/javascript" src="../js/sign_In_&_Create_Account.js"></script>
 
 </body>
 </html>
