Cleaning SASS & Js code files

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,6 @@
 @import "_best_Sellers";
 @import "_wish_List";
 @import "_store";
-@import "_my_Cart";
 @import "_new_Arrivals";
 @import "_sign_In_&_Create_Account";
 @import "_purchase_Order";
@@ -21,8 +20,8 @@
 @import "_show_Room";
 @import "_footer";
 @import "_room_Dark_Mode";
-@import "_error404";
 @import "_media_Landing";
 @import "_media_Queries";
+// @import "_error404"; Undefined yet
 
 
