--- a/scss/_media_Queries.scss
+++ b/scss/_media_Queries.scss
@@ -1,3 +1,12 @@
 // Media queries
 
+// Undefined yet
+
 // Screen 1250
+// Screen 850
+// Screen 550
+// Screen 490
+// Screen 400
+// Screen 360
+
+
