--- a/scss/_wish_List.scss
+++ b/scss/_wish_List.scss
@@ -1,7 +1,4 @@
-
-// Wishlist
-
-section#wishlistSide{
+#wishlistSide{
     display: none;
     &:checked ~ .sectionWishlist{
         transform:translate(0%);
@@ -9,17 +6,18 @@ section#wishlistSide{
 }
 .sectionWishlist{
     width:30vw;
-    height: 100vh;
+    height: $screenHeight;
     position: fixed;
     top:0;
     right:0;
     z-index: 10px;
     @extend .flexColumn;
+    align-items: flex-start;
     background-color: $whiteColor;
     overflow: hidden;
     box-shadow: $boxShadowMenu;
     z-index: 10;
-    padding-top: 60px;
+    padding-top: 30px;
     transform: translate(105%);
     transition: $transition;
     .wishHeadLine{
@@ -37,49 +35,50 @@ section#wishlistSide{
         }
     }
     .menuWishlist{
-        width: 100%;
+        width:100%;
         .choiceWishlist{
-            width: 90%;
+            width: 100%;
             @include display_flex_column_space_between_flex_start();
-            margin:  $neutralMargin;
+            margin: $neutralMargin;
             .wishlistWord{
-                width: inherit;
+                width: 100%;
                 font-size: $MediumTitle;
                 font-family: $fontJura;
                 color:$primaryColor;
                 font-weight:$bold;
-                margin:0px ;
+                padding: 25px 0px 20px 20px;
             }
             .wish{
-                width: 90%;
+                width:100%;
                 .category{
+                    width:100%;
+                    border-bottom: 0;
+                    padding-left: 20px;
+                    margin-right:0px;
                     @include display_flex_row_space_between_flex_start();
-                    padding: 20px 0px;
-                    border-bottom: none;
                     .titleWishlist{
+                        width: 100%;
                         font-size: $regularText;
                         font-family: $fontJura;
                         color:$primaryColor;
                         font-weight: $bold;
-                        margin: 15px 0px;
                     }
                 }
                 .containerWishlist{
-                    width: 90%;
-                    height: 430px;
-                    padding: 0px 20px 20px 0px;
-                    overflow: scroll;
-                    margin:0px 20px 0px 0px;
-                    position: fixed;
-                    top:150px;
+                    width:90%;
+                    height:440px;
+                    overflow-y: scroll;
+                    position:absolute;
+                    top:140px;
                     left:20px;
+                    padding:0px 50px 0px 0px;
                     .wishlist{
                         .blockProduct{
                             @extend .flexRowBetween;
                             padding: 20px 0px;
                             border-bottom: $borderBottom;
                             .itemProduct{
-                                width:15%;
+                                width:18%;
                             }
                             .description{
                                 display: flex;
@@ -93,10 +92,13 @@ section#wishlistSide{
                                 }
                                 .icons{
                                     img{
-                                        width:20px;
-                                        cursor: pointer;
+                                        width:15px;
                                     }
                                 }
+                            }
+                            .itemWishlist{
+                                width:20px;
+                                cursor: pointer;
                             }
                         }
                     }
