--- a/scss/_wish_List.scss
+++ b/scss/_wish_List.scss
@@ -92,7 +92,8 @@
                                 }
                                 .icons{
                                     img{
-                                        width:15px;
+                                        width:20px;
+                                        cursor:pointer;
                                     }
                                 }
                             }
