--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -2,7 +2,7 @@
 
 // wishlist & shopping cart & store modal
 
-#messageContainer, #messageNewProduct{
+#messageContainer, #messageNewProduct, #out-of-stock-message{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -11,7 +11,7 @@
     right: 7%;
     z-index: 99;
     div{
-        .messageWishlist, .stockProduct{
+        .messageWishlist, .stockProduct, .soldOutProduct{
             width: 20vw;
             height: auto;
             font-size: $xSmallText;
@@ -28,41 +28,11 @@
             filter: $filterShadow;
         }
     }
-}
-#messageNewProduct{
-    position: fixed;
-    bottom: 70px;
-    right: 7%;
 }
 
 // SoldOutStock
 
 #out-of-stock-message{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: fixed;
-    bottom: 70px;
-    right: 7%;
-    z-index: 99;
-    div{
-        .soldOutProduct{
-            width: 20vw;
-            height: auto;
-            font-size: $xSmallText;
-            font-family: $fontJura;
-            color:$primaryColor;
-            font-weight:$bold;
-            background-color: #000000d9;
-            color: white;
-            padding: 20px;
-            border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            filter: $filterShadow;
-        }
-    }
     animation:slideUp 5800ms linear 0.3s;
     @keyframes slideUp {
         0% {
