--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -8,13 +8,13 @@
     justify-content: space-between;
     position: fixed;
     bottom: 70px;
-    right: 7%;
+    right: 6%;
     z-index: 99;
     div{
         .messageWishlist, .stockProduct, .soldOutProduct{
-            width: 20vw;
+            width: 14vw;
             height: auto;
-            font-size: $xSmallText;
+            font-size: $xxSmallText;
             font-family: $fontJura;
             color:$primaryColor;
             font-weight:$bold;
