--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,9 @@ body {
   background-color: #ffffff;
 }
 
+html {
+  scroll-behavior: smooth;
+}
 html .mainContainer {
   width: 100%;
   height: 100%;
@@ -3065,7 +3068,7 @@ html .mainContainer .arrowUp .directionUp .arrowUpIcon:hover {
 }
 .footerContainer .footer {
   width: 100%;
-  padding: 50px 50px;
+  padding: 50px 30px;
   position: relative;
 }
 .footerContainer .footer .socialMediaFooter .contactUs {
